<resources>
    <string name="app_name">PhoShop</string>

    <!-- catalog drop down menu option -->
    <string name="action_delete_all_entries">Delete all products</string>

    <!-- Product name category -->
    <string name="category_productName">Product name</string>

    <!-- Product information category -->
    <string name="category_productSpecifics">More Information</string>

    <!-- edit text hints-->
    <string name="edit_hint_name">Name</string>
    <string name="edit_hint_quantity">Quantity</string>
    <string name="edit_hint_price">Price</string>
    <string name="edit_hint_supplier">Supplier\'s email</string>

    <!-- check mark menu title -->
    <string name="action_save">Save</string>

    <!-- for the empty View -->
    <string name="empty_view_title_text">We need ingredients to make the food!</string>
    <string name="empty_view_subtitle_text">Let\'s get started by adding some ingredients</string>

    <!-- edit title for existing ingredient-->
    <string name="existing_ingredient">Edit Ingredient</string>
    <!-- update failed -->
    <string name="updated_failed">Update failed</string>
    <!-- update success-->
    <string name="update_success">Update success</string>
    <!--unsaved changes-->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!--discard changes-->
    <string name="discard">Discard</string>
    <!--Keep editing-->
    <string name="keep_edit">Keep Editing</string>
    <!-- deleted failed/succeeded -->
    <string name="deleted_failed">Deletion failed</string>
    <string name="deletion_pass">Deletion success</string>
    <!-- delete message -->
    <string name="delete_dialog_msg">Delete this ingredient</string>
    <!-- delete -->
    <string name="delete">Delete</string>
    <!--cancel -->
    <string name="cancel">Cancel</string>

    <!-- Button lable -->
    <string name="upload_picture">Upload Picture</string>

    <!-- button supplier-->
    <string name="order_email">Order through email</string>
</resources>
